--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@react-navigation/drawer": "^7.4.1",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
-    "@tanstack/react-query": "^5.79.0",
+    "@tanstack/react-query": "^5.80.7",
     "ajv": "^8.17.1",
+    "axios": "^1.9.0",
     "expo": "~53.0.11",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.6",
@@ -28,6 +29,7 @@
     "expo-image": "~2.2.1",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.7",
+    "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
@@ -42,11 +44,15 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "zustand": "^5.0.5"
+    "zod": "^3.25.64",
+    "zustand": "^5.0.5",
+    "expo-network": "~7.1.5",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@expo/webpack-config": "^19.0.1",
+    "@tanstack/eslint-plugin-query": "^5.78.0",
     "@types/react": "~19.0.10",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
