--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^5.1.5",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.4.1",
     "@react-navigation/elements": "^2.3.8",
@@ -28,6 +29,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.2.1",
     "expo-linking": "~7.1.5",
+    "expo-network": "~7.1.5",
     "expo-router": "~5.0.7",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.9",
@@ -45,9 +47,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "zod": "^3.25.64",
-    "zustand": "^5.0.5",
-    "expo-network": "~7.1.5",
-    "@react-native-async-storage/async-storage": "2.1.2"
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
